src/test/ui/issues/issue-13359.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-13359.rs:6:5
   |
LL |     foo(1*(1 as isize));
   |     ^^^^--------------^
   |         |
   |         expected `i16`, found `_`
   |
note: function defined here
  --> $DIR/issue-13359.rs:1:4
   |
LL | fn foo(_s: i16) { }
   |    ^^^ -------
help: provide an argument of the correct type
   |
LL |     foo({i16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-13359.rs:10:5
   |
LL |     bar(1*(1 as usize));
   |     ^^^^--------------^
   |         |
   |         expected `u32`, found `_`
   |
note: function defined here
  --> $DIR/issue-13359.rs:3:4
   |
LL | fn bar(_s: u32) { }
   |    ^^^ -------
help: provide an argument of the correct type
   |
LL |     bar({u32});
   |     ^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
